--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: github_safe
-        run: git config --global --add safe.directory $(realpath .)
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - name: Cache node_modules
         id: cache-modules
         uses: actions/cache@v1
